--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-.vscode/launch.json
 .vscode/settings.json
-.vscode/tasks.json
 build/build.ninja
 build/cmake_install.cmake
 build/CMakeCache.txt
@@ -72,3 +70,4 @@ CMakeCache.txt
 bin/appDB
 .gitignore
 Makefile
+log.txt
