--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,22 @@ CMakeFiles/appDB.dir/src/users.cpp.o.d
 .editorconfig
 cmake_install.cmake
 CMakeCache.txt
-bin/appDB
-.gitignore
+CMakeFiles
+CMakeScripts
+Testing
 Makefile
-log.txt
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+build/.cmake/api/v1/reply/index-2024-10-20T09-00-52-0847.json
+build/.cmake/api/v1/reply/index-2024-10-22T19-12-40-0337.json
+.vscode/c_cpp_properties.json
+bin/appDB
+build/.cmake/api/v1/reply/index-2024-10-20T09-00-52-0847.json
+CMakeFiles/Progress/3
+CMakeFiles/Progress/4
+CMakeFiles/Progress/5
+CMakeFiles/Progress/count.txt
