--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,13 @@ CMakeFiles/Progress/3
 CMakeFiles/Progress/4
 CMakeFiles/Progress/5
 CMakeFiles/Progress/count.txt
+CMakeFiles/CMakeOutput.log
+CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
+CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
+CMakeFiles/3.22.1/CMakeSystem.cmake
+CMakeFiles/3.22.1/CompilerIdCXX/a.out
+CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
+CMakeFiles/Progress/3
+CMakeFiles/Progress/4
+CMakeFiles/Progress/5
+CMakeFiles/Progress/count.txt
