--- a/.gitignore
+++ b/.gitignore
@@ -94,18 +94,6 @@ build/.cmake/api/v1/reply/index-2024-10-20T09-00-52-0847.json
 build/.cmake/api/v1/reply/index-2024-10-22T19-12-40-0337.json
 .vscode/c_cpp_properties.json
 bin/appDB
-build/.cmake/api/v1/reply/index-2024-10-20T09-00-52-0847.json
-CMakeFiles/Progress/3
-CMakeFiles/Progress/4
-CMakeFiles/Progress/5
-CMakeFiles/Progress/count.txt
-CMakeFiles/CMakeOutput.log
-CMakeFiles/3.22.1/CMakeCXXCompiler.cmake
-CMakeFiles/3.22.1/CMakeDetermineCompilerABI_CXX.bin
-CMakeFiles/3.22.1/CMakeSystem.cmake
-CMakeFiles/3.22.1/CompilerIdCXX/a.out
-CMakeFiles/3.22.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
-CMakeFiles/Progress/3
-CMakeFiles/Progress/4
-CMakeFiles/Progress/5
-CMakeFiles/Progress/count.txt
+.gitignore
+Makefile
+log.txt
